--- a/src/CoralScrum/MainBundle/Resources/views/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/design.css') }}" type="text/css" media="screen" />
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block body %}
@@ -33,15 +34,7 @@
             <div class="container">
 
                 {% block container %}
-
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <ul class="squareLi">
-                    <li>
-                        <a href="{{ path('project') }}">View projects</a>
-                    </li>
-                </ul>
-                {% endif %}
-
+                    
                 {% endblock %}
             </div>
             <div class="clear"></div>
