--- a/src/CoralScrum/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/CoralScrum/UserBundle/Resources/views/Security/login.html.twig
@@ -11,12 +11,12 @@
                 <tr>
                     <td><label for="username">Username </label></td>
                     <td><input tabindex="1" maxlength="30" type="text" id="username" name="_username" value="{{ last_username }}" /></td>
-                    <td><a href="{{ path('fos_user_registration_register') }}">register</a></td>
+                    <td><a href="{{ path('fos_user_registration_register') }}">Register</a></td>
                 </tr>
                 <tr>
                     <td><label for="password">Password</label></td>
                     <td><input tabindex="2" maxlength="30" type="password" id="password" name="_password" /></td>
-                    <td><a href="{{ path('fos_user_resetting_request') }}">forgotten password</a></td>
+                    <td><a href="{{ path('fos_user_resetting_request') }}">Forgotten password</a></td>
                 </tr>
                 {#
                 <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
