Updated custom error pages design

--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -8,7 +8,7 @@ An Error Occurred: {{ status_text }}
     <h1>Oops! An Error Occurred</h1>
     <h2>The server returned a "{{ status_code }} {{ status_text }}".</h2>
 
-    <div>
-        Something is broken.
+    <div class="error">
+        {{ exception.message|e|replace({"\n": '<br>'})|format_file_from_text }} 
     </div>
 {% endblock -%}
