Fixed a typo on project view

--- a/src/CoralScrum/MainBundle/Resources/views/Project/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/index.html.twig
@@ -23,7 +23,7 @@
                 <td>{{ entity.isPublic }}</td>
                 <td><a target="_blank" href="{{ entity.repository }}">{{ entity.repository }}</a></td>
                 <td>
-                    {% if app.user.id == entity.id %}
+                    {% if app.user.id == entity.owner.id %}
                     <a class="edit" href="{{ path('project_edit', { 'projectId': entity.id }) }}"></a>
                     <a class="delete popupDialog" href="{{ path('project_delete', { 'projectId': entity.id }) }}"></a>
                     {% endif %}
