Allowed anonymous users to view a public project

--- a/src/CoralScrum/MainBundle/Resources/views/Project/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/index.html.twig
@@ -20,7 +20,7 @@
             <tr>
                 <td><a href="{{ path('project_show', { 'projectId': entity.id }) }}">#{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
-                <td>{{ entity.isPublic }}</td>
+                <td>{% if entity.isPublic %}Yes{% endif %}</td>
                 <td><a target="_blank" href="{{ entity.repository }}">{{ entity.repository }}</a></td>
                 <td>
                     {% if app.user.id == entity.owner.id %}
