--- a/src/CoralScrum/MainBundle/Resources/views/UserProject/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserProject/edit.html.twig
@@ -9,6 +9,6 @@
 
     {{ form(edit_form) }}
 
-    <a class="button" href="{{ path('collaborator', { 'projectId': projectId }) }}">Back to Collaborators</a>
+    <a class="button" href="{{ path('project_show', { 'projectId': projectId }) }}">Back to Project</a>
 
 {% endblock %}
