--- a/src/CoralScrum/MainBundle/Resources/views/UserProject/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserProject/index.html.twig
@@ -24,7 +24,7 @@
                 <td>{{ entity.accountType }}</td>
                 <td>
                     <a class="edit" href="{{ path('collaborator_edit', { 'projectId': projectId, 'id': entity.id }) }}"></a>
-                    {% if entity.accountType != "Project Owner" %}
+                    {% if entity.user.id != app.user.id %}
                     <a class="delete popupDialog" href="{{ path('collaborator_delete', { 'projectId': projectId, 'id': entity.id }) }}"></a>
                     {% endif %}
                 </td>
