--- a/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
@@ -47,7 +47,7 @@
             </tr>
             <tr>
                 <th>Tester</th>
-                <td>{{ entity.tester }}</td>
+                <td><span title="{{ entity.tester.firstname ~ ' ' ~ entity.tester.lastname }}">{{ entity.tester }}</span></td>
             </tr>
             <tr>
                 <th>Test Date</th>
