--- a/src/CoralScrum/MainBundle/Resources/views/home.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/home.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}{{ parent() }} - Index{% endblock %}
+{% block title %}{{ parent() }}{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/design.css') }}" type="text/css" media="screen" />
