Fixed an error when displaying firstname and lastname on tooltip

--- a/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
@@ -47,7 +47,7 @@
             </tr>
             <tr>
                 <th>Tester</th>
-                <td><span title="{{ entity.tester.firstname ~ ' ' ~ entity.tester.lastname }}">{{ entity.tester }}</span></td>
+                <td>{% if entity.tester is not null %}<span title="{{ entity.tester.firstname ~ ' ' ~ entity.tester.lastname }}">{{ entity.tester }}</span>{% endif %}</td>
             </tr>
             <tr>
                 <th>Test Date</th>
