--- a/src/CoralScrum/MainBundle/Resources/views/Test/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Test/index.html.twig
@@ -47,7 +47,7 @@
                     <img title="Test failed" src="{{ asset('img/error.png') }}" alt=""/>
                     {%- endif -%}
                 </td>
-                <td><span title="{{ test.tester.firstname ~ ' ' ~ test.tester.lastname }}">{{ test.tester }}</span></td>
+                <td>{% if test.tester is not null %}<span title="{{ test.tester.firstname ~ ' ' ~ test.tester.lastname }}">{{ test.tester }}</span>{% endif %}</td>
                 <td>{% if test.testDate %}{{ test.testDate|date('Y-m-d H:i') }}{% endif %}</td>
                 <td>{{ test.comment }}</td>
                 {% if isGranted -%}
