--- a/src/CoralScrum/MainBundle/Resources/views/Project/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
 {% block container -%}
-    <h1>Project list</h1>
+    <h1>Projects list</h1>
 
     <a class="button" href="{{ path('project_new') }}">Create a new Project</a>
 
