--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>Sprint list</h1>
+    <h1>Sprints list</h1>
 
     {% if isGranted -%}
     <a class="button" href="{{ path('sprint_new', { 'projectId': projectId }) }}">Create a new Sprint</a>
