--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>Sprint #{{ entity.id }}</h1>
+    <h1>Sprint #{{ entity.id }}
+        {% if isGranted -%}
+            <a class="edit" href="{{ path('sprint_edit', { 'projectId': projectId, 'sprintId': entity.id }) }}"></a>
+        {%- endif -%}
+    </h1>
     <h3><span class="bold">Start Date:</span> {{ entity.startDate|date('d M Y H:i') }}</h3>
     <h3><span class="bold">Duration:</span> {{ entity.duration }} {{ entity.duration < 1 ? 'day' : 'days' }}</h3>
 
